; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_radeon_object.c_radeon_bo_wait.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_radeon_object.c_radeon_bo_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.radeon_bo = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @radeon_bo_wait(%struct.radeon_bo* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.radeon_bo*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.radeon_bo* %0, %struct.radeon_bo** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load %struct.radeon_bo*, %struct.radeon_bo** %5, align 8
  %10 = getelementptr inbounds %struct.radeon_bo, %struct.radeon_bo* %9, i32 0, i32 0
  %11 = load i32, i32* %7, align 4
  %12 = call i32 @ttm_bo_reserve(%struct.TYPE_6__* %10, i32 1, i32 %11, i32* null)
  store i32 %12, i32* %8, align 4
  %13 = load i32, i32* %8, align 4
  %14 = icmp ne i32 %13, 0
  %15 = zext i1 %14 to i32
  %16 = call i64 @unlikely(i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %3
  %19 = load i32, i32* %8, align 4
  store i32 %19, i32* %4, align 4
  br label %39

20:                                               ; preds = %3
  %21 = load i32*, i32** %6, align 8
  %22 = icmp ne i32* %21, null
  br i1 %22, label %23, label %30

23:                                               ; preds = %20
  %24 = load %struct.radeon_bo*, %struct.radeon_bo** %5, align 8
  %25 = getelementptr inbounds %struct.radeon_bo, %struct.radeon_bo* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load i32*, i32** %6, align 8
  store i32 %28, i32* %29, align 4
  br label %30

30:                                               ; preds = %23, %20
  %31 = load %struct.radeon_bo*, %struct.radeon_bo** %5, align 8
  %32 = getelementptr inbounds %struct.radeon_bo, %struct.radeon_bo* %31, i32 0, i32 0
  %33 = load i32, i32* %7, align 4
  %34 = call i32 @ttm_bo_wait(%struct.TYPE_6__* %32, i32 1, i32 %33)
  store i32 %34, i32* %8, align 4
  %35 = load %struct.radeon_bo*, %struct.radeon_bo** %5, align 8
  %36 = getelementptr inbounds %struct.radeon_bo, %struct.radeon_bo* %35, i32 0, i32 0
  %37 = call i32 @ttm_bo_unreserve(%struct.TYPE_6__* %36)
  %38 = load i32, i32* %8, align 4
  store i32 %38, i32* %4, align 4
  br label %39

39:                                               ; preds = %30, %18
  %40 = load i32, i32* %4, align 4
  ret i32 %40
}

declare dso_local i32 @ttm_bo_reserve(%struct.TYPE_6__*, i32, i32, i32*) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @ttm_bo_wait(%struct.TYPE_6__*, i32, i32) #1

declare dso_local i32 @ttm_bo_unreserve(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
